apps/codebuddy-real-campaign/level-3-ai-chat/.codebuddy/tool-results/call_1772387530481_vuuuim4qga.txt
(node:737276) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
/mnt/d/CascadeProjects/grok-cli/apps/codebuddy-real-campaign/level-3-ai-chat/server.js:2
import express from 'express';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.20.8
Smoke test failed: Could not connect to server: connect ECONNREFUSED 127.0.0.1:3000